Changes
~~~~~~~
004 (2004-04-18)
* Factored out the VolumeControl widget and used in both Volume and Mixer.
* Lots of configurable things via masks to VolumeControl()
* Applet control is now 0-100 instead of 0-1 and has finer steppings.
* Follow panel orientation.
* Separate options for Mixer with hide/show each channel.
* Option to show values on Mixer sliders.

003
* Wrote a real Mixer app to replace the gnome-volume-control wrapper.
  UI is a straight rip of gnome-volume-control (for now at least). Needs
  some polish, but it works.

* Fixed a small bug reported by Antiphon with Sawfish (popup slider
  was being positioned wrong)

002
* Added options dialog and settings for mixer device (e.g. /dev/mixer)
  and the channel to control (e.g. PCM or Master volume)

* Changed the popup positioning to always be at the top of the panel
  and centered (?) on the icon. Still need to handle Left, Right and Top panels.

* Fixed a small bug in findrox.py.

001  First release