@@ -3,7 +3,7 @@
 <Summary>ROX Volume and Mixer</Summary>
 <About>
 <Purpose>ROX Volume and Mixer</Purpose>
-<Version>004</Version>
+<Version>005</Version>
 <Authors>Ken Hayber</Authors>
 <License>GNU General Public License</License>
 <Homepage></Homepage>
